@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkgame.c,v 1.770 2009/03/28 22:14:59 c_anthon Exp $
+ * $Id: gtkgame.c,v 1.771 2009/03/30 08:48:54 c_anthon Exp $
  */
 
 #include "config.h"
@@ -915,13 +915,11 @@ extern void SetAnnotation( moverecord *pmr) {
 
 	    pwAnalysis = gtk_vbox_new( FALSE, 0 );
 
-	    pwBox = gtk_hbox_new( FALSE, 0 );
+	    pwBox = gtk_vbox_new( FALSE, 0 );
 	    gtk_box_pack_start( GTK_BOX( pwBox ),
 				gtk_label_new( pmr->mt == MOVE_TAKE ? _("Take") :
-				    _("Drop") ),
-				FALSE, FALSE, 2 );
-	    gtk_box_pack_start( GTK_BOX( pwBox ), 
-                                   gtk_label_new(aszSkillType[pmr->stCube] ? gettext(aszSkillType[pmr->stCube]) : ""),
+				    _("Drop") ), FALSE, FALSE, 2 );
+	    gtk_box_pack_start( GTK_BOX( pwBox ), skill_label(pmr->stCube),
 				FALSE, FALSE, 2 );
 	    gtk_box_pack_start( GTK_BOX( pwAnalysis ), pwBox, FALSE, FALSE,
 				0 );
