@@ -1,3 +1,7 @@
+Mon Mar 30 10:46:29 CEST 2009 Christian Anthon <anthon@kiku.dk>
+
+	* gtkgame.c: add highligting to the skill label when take/drop
+
 Sun Mar 29 21:25:51 CEST 2009 Christian Anthon <anthon@kiku.dk>
 
 	* gnubgmodule.c: Avoid calling PythonNextTurn in PythonCommand, since
